# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_09_10_015014) do
+ActiveRecord::Schema[8.0].define(version: 2025_09_10_024132) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -20,6 +20,30 @@ ActiveRecord::Schema[8.0].define(version: 2025_09_10_015014) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.index ["jti"], name: "index_jwt_denylists_on_jti", unique: true
+  end
+
+  create_table "posts", force: :cascade do |t|
+    t.string "title", limit: 100, null: false
+    t.string "body", limit: 1000, null: false
+    t.bigint "user_id", null: false
+    t.datetime "deleted_at"
+    t.integer "view_count", default: 0, null: false
+    t.jsonb "metadata", default: {}, null: false
+    t.jsonb "jsonb", default: {}, null: false
+    t.decimal "average_rating", precision: 3, scale: 2, default: "0.0"
+    t.integer "rating_count", default: 0
+    t.datetime "created_at", null: false
+    t.datetime "updated_at", null: false
+    t.index "((metadata ->> 'category'::text))", name: "index_posts_on_metadata_category"
+    t.index "((metadata ->> 'language'::text))", name: "index_posts_on_metadata_language"
+    t.index "((metadata ->> 'source'::text))", name: "index_posts_on_metadata_source"
+    t.index "((metadata ->> 'tags'::text))", name: "index_posts_on_metadata_tags"
+    t.index ["average_rating", "created_at"], name: "index_posts_on_rating_and_created_at"
+    t.index ["created_at"], name: "index_posts_on_created_at_desc"
+    t.index ["deleted_at", "created_at"], name: "index_posts_on_deleted_at_and_created_at"
+    t.index ["metadata"], name: "index_posts_on_featured_metadata", where: "(metadata ? 'featured'::text)", using: :gin
+    t.index ["user_id", "created_at"], name: "index_posts_on_user_id_and_created_at"
+    t.index ["user_id"], name: "index_posts_on_user_id"
   end
 
   create_table "users", force: :cascade do |t|
@@ -35,4 +59,6 @@ ActiveRecord::Schema[8.0].define(version: 2025_09_10_015014) do
     t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
     t.index ["username"], name: "index_users_on_username", unique: true
   end
+
+  add_foreign_key "posts", "users"
 end
